# llm-lsp-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
CODEMAPS/: README.md  architecture.md  diagnostic-cache.md
docs/: compact-output-prd.md
docs/adr/: 0001-record-architecture-decisions.md  0002-llm-optimized-compact-output-format.md  0003-support-absolute-lsp-server-paths-in-configuration.md  0004-lsp-document-synchronization-via-didopen-didchange-didclose.md  0005-unified-workspace-diagnostic-cache-with-streaming.md  0006-diagnostic-log-masking-to-prevent-log-bloat.md  0007-logging-clarity-and-elegance-refactor.md  0008-mtime-based-cache-invalidation-for-lsp-diagnostics.md  0009-promote-cache-hit-to-info-and-add-diagnostic-log-file-output.md  0010-expose-didchange-subcommand-for-external-file-change-notification.md  0011-support-lsp-call-hierarchy-for-incoming-and-outgoing-calls.md  0012-output-formatter-position-preservation-and-raw-lsp-response.md  0013-hierarchical-symbol-output-with-depth-controlled-traversal.md  0014-text-format-tree-structure-and-field-omission-for-document-symbols.md  0015-compact-range-format-and-kind-name-field-standardization-for-all-output-formats.md  0016-load-lsp-client-capabilities-from-server-specific-json-files.md  0017-diagnostic-output-compact-range-format-with-tag-translation.md  0018-unified-output-formatter-with-protocol-based-dispatch.md  0019-lsp-rename-feature-with-layered-service-architecture.md  0020-source-context-field-in-json-yaml-output.md  0021-layered-configuration-system-with-deep-merge.md  0022-lsp-diagnostic-protocol-semantics-and-cache-optimization.md  0023-lsp-response-types-with-pydantic-models.md  0024-transport-layer-type-boundary-enforcement.md
docs/architecture/: blueprint.md  technical-standards.md
docs/designs/: layered-config-system.md
llm_lsp_cli/: client.py  server.py
src/llm_lsp_cli/: __init__.py  __main__.py  cli.py  daemon.py  daemon_client.py  exceptions.py  test_filter.py
tests/: __init__.py  conftest.py  fixtures.py  test_auto_start_integration.py  test_cli.py  test_cli_log_output.py  test_cli_structure.py  test_config.py  test_config_commands.py  test_csv_integration.py  test_daemon_client.py  test_daemon_handlers.py  test_daemon_isolation.py  test_daemon_signal_handling.py  test_e2e_daemon_lifecycle.py  test_exceptions.py  test_filter.py  test_filter_diagnostics.py  test_filter_glob_patterns.py  test_filter_integration.py  test_formatter.py  test_ipc.py  test_language_detector.py  test_logging_integration.py  test_lsp_integration.py  test_lsp_types.py  test_lsp_types_diagnostics.py  test_runtime_paths.py  test_server_registry.py
tests/cli/: test_call_hierarchy_commands.py  test_did_change_command.py  test_rename_command.py
tests/commands/: test_lsp_integration.py
tests/config/: test_config_manager_facade.py  test_path_builder.py  test_server_validation.py
tests/daemon/: test_call_hierarchy_handler.py  test_did_change_handler.py  test_document_sync.py  test_document_sync_edge_cases.py  test_handle_lsp_method_integration.py
tests/domain/: test_domain_integration.py  test_edge_cases.py  test_typeddict_configs.py
tests/infrastructure/: __init__.py  test_exception_handling.py
tests/integration/: test_backward_compatibility.py  test_cli_trace_flag.py  test_config_e2e.py  test_daemon_failure_logging.py  test_diagnostic_cache_edge_cases.py  test_diagnostic_logging.py  test_diagnostics_integration.py  test_document_sync_end_to_end.py  test_fixtures_integration.py  test_logging_e2e.py  test_lsp_server_wait_fix.py  test_phase5_integration.py  test_registry_path_resolver_integration.py  test_rename.py  test_restart_debug_integration.py  test_type_safe_architecture.py
tests/lsp/: __init__.py  test_cache.py  test_client_document_sync.py  test_client_uri_parameter.py  test_no_casts.py  test_typed_transport.py  test_types_pydantic.py
tests/shared/: test_logging.py
(+246 files in other folders)
