[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = "A CLI for interacting with Language Server Protocol servers."
name = "llm-lsp-cli"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
pydantic = "^2.5.0"
python = "^3.9"
python-daemon = "^2.3.0"
typer = { extras = ["all"], version = "^0.9.0" }

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
